--- a/style.css
+++ b/style.css
@@ -516,6 +516,7 @@ p {
   align-items: center;
   transform: translate(100%);
   transition: transform 0.2s ease-in-out;
+  z-index: 2;
 }
 
 .show {
