--- a/work2/style.css
+++ b/work2/style.css
@@ -18,7 +18,7 @@ body {
   align-items: center;
   align-content: center;
   flex-direction: column;
-  margin:42px 0;
+
 }
 
 h1 {
@@ -81,6 +81,10 @@ input {
 }
 
 @media (max-width: 772px) {
+
+  body{
+    padding: 63px;
+  }
   #contenedor {
     width: 80%;
   }
