--- a/work4/style.css
+++ b/work4/style.css
@@ -93,6 +93,7 @@
     background-color: #3b425294;
     border-radius: 15px;
     padding: 6%;
+    margin: 21px 0;
   }
   
   @media (max-width: 821px) {
