--- a/work4/style.css
+++ b/work4/style.css
@@ -17,7 +17,7 @@
     height: 100vh;
     color: #eceff4;
     background-size:cover;
-  }
+    }
   
   #hora {
     font-size: 6rem;
@@ -93,7 +93,8 @@
     background-color: #3b425294;
     border-radius: 15px;
     padding: 6%;
-    margin: 51px 0;
+    margin: 21px 0;
+   
   }
   
   @media (max-width: 821px) {
@@ -121,6 +122,10 @@
 
 @media (max-width: 580px) {
 
+  #hora{
+    font-size: 3rem;
+  }
+
   #links {
 
     grid-template-columns: 100px  100px;
@@ -135,6 +140,10 @@
 
   #links img{
     width: 69px !important;
+  }
+
+  body {
+    min-height: 103vh;
   }
   
 }
