--- a/style.css
+++ b/style.css
@@ -444,6 +444,7 @@ img.imagen:hover::after {
   margin: 1em;
   height: 240px;
   width: 396px;
+  position: relative;
   box-shadow: 0px 0px 12px rgb(230, 230, 230) !important;
   background-size: cover;
   background-repeat: no-repeat;
@@ -455,8 +456,38 @@ img.imagen:hover::after {
   background-position: center;
 }
 
+#video_presentacion {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  align-items: center;
+  height: 33px;
+  margin: 0.5em;
+  padding: 0px 9px;
+  background-color: #fff;
+  border-radius: 6px !important;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.1) !important;
+  color:#de6a6a;
+}
+
+#video_presentacion img {
+  padding-right: 12px;
+}
+
+#video_presentacion h3 {
+  font-size: 1em;
+}
+
 .trabajo:hover {
   opacity: 0.93;
+}
+
+.trabajo a:hover{
+  color:#de6a6a;
+  border-bottom: 0px;
 }
 
 #trabajo1 {
@@ -486,6 +517,11 @@ img.imagen:hover::after {
 #trabajo7 {
   background-image: url("imx/Proyectos/work7.jpg");
 }
+
+#trabajo8 {
+  background-image: url("imx/Proyectos/work8.jpg");
+}
+
 
 #listado_codigos a:hover {
   border: 0;
